--- a/dwh.cfg
+++ b/dwh.cfg
@@ -6,12 +6,12 @@ secret =
 dwh_cluster_type = multi-node
 dwh_num_nodes = 4
 dwh_node_type = dc2.large
-dwh_iam_role_name = dwhRole
-dwh_iam_role_arn = arn:aws:iam::425798163221:role/dwhRole
-dwh_cluster_identifier = dwhCluster
+dwh_iam_role_name = 
+dwh_iam_role_arn = 
+dwh_cluster_identifier = 
 
 [CLUSTER]
-host = dwhcluster.cycbanvhd2dp.us-west-2.redshift.amazonaws.com
+host = 
 db_name = dev
 db_user = dwhuser
 db_password = Passw0rd
